--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>ugv_sdk</name>
   <version>0.1.6</version>
   <description>Weston Robot Platform SDK</description>
@@ -13,9 +13,10 @@
   <url type="bugtracker">https://github.com/westonrobot/ugv_sdk/issues</url>
   <url type="repository">https://github.com/westonrobot/ugv_sdk</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>async_port</build_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>async_port</depend>
   <build_depend>asio</build_depend>
-  <run_depend>async_port</run_depend>
-  <export></export>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
